generic-full-export/generic-full-export-output/generic-full-export-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "360"
  name: generic-full-export-service
  namespace: validation-flow
spec:
  selector:
    app.kubernetes.io/instance: validation-flow-generic-full-export-instance
  ports:
    - name: generic-full-export-9090
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: generic-full-export-7016
      protocol: TCP
      port: 7016
      targetPort: 7016
