generic-full-export/generic-full-export-output/generic-full-export-8001-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "371"
  name: generic-full-export-8001-route
  namespace: validation-flow
spec:
  to:
    kind: Service
    name: generic-full-export-service
    weight: 100
  port:
    targetPort: generic-full-export-8001
